# docs/swagger.json
@@ -9,17 +9,6 @@
     "paths": {
         "/fighters": {
             "get": {
-                "description": "Search fighters based on name, stance, weight, wins, losses, and paginate results",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Fighters"
-                ],
-                "summary": "Search and filter fighters",
                 "parameters": [
                     {
                         "type": "string",
@@ -178,31 +167,7 @@
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "List of ranked fighters",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/handlers.Fighter"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request - Missing weight class parameter",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error - Database query issue",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/register": {
@@ -234,29 +199,6 @@
         }
     },
     "definitions": {
-        "handlers.Fighter": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "rank": {
-                    "type": "integer"
-                },
-                "record": {
-                    "type": "string"
-                },
-                "weight_class": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Fighter": {
             "type": "object",
             "properties": {
